[gd_scene load_steps=11 format=3 uid="uid://x55ncr0al6en"]

[ext_resource type="Script" path="res://menu/pause_menu/pause_menu.gd" id="1_apuh4"]
[ext_resource type="Theme" uid="uid://cfbk3sh8oh837" path="res://assets/sprites/menu/pause_menu/pause_menu_theme.tres" id="2_6yqy5"]
[ext_resource type="Script" path="res://menu/pause_menu/save_menu.gd" id="3_v34e3"]
[ext_resource type="Script" path="res://menu/pause_menu/load_menu.gd" id="4_j6uxq"]

[sub_resource type="Animation" id="Animation_pc1d8"]
resource_name = "Load_menu_show"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pause_menu/Panel/CenterContainer/Load_menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pause_menu/Panel/CenterContainer/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pause_menu/Panel/CenterContainer/Save_menu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_g8lsw"]
resource_name = "Pause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pause_menu/Panel/CenterContainer/Load_menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pause_menu/Panel/CenterContainer/VBoxContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pause_menu/Panel/CenterContainer/Save_menu:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_765a3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pause_menu/Panel/CenterContainer/Load_menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pause_menu/Panel/CenterContainer/VBoxContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pause_menu/Panel/CenterContainer/Save_menu:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_41bvb"]
resource_name = "Save_menu_show"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pause_menu/Panel/CenterContainer/Load_menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pause_menu/Panel/CenterContainer/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pause_menu/Panel/CenterContainer/Save_menu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r42v0"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o187k"]
_data = {
"Load_menu_show": SubResource("Animation_pc1d8"),
"Pause": SubResource("Animation_g8lsw"),
"RESET": SubResource("Animation_765a3"),
"Save_menu_show": SubResource("Animation_41bvb"),
"Unpause": SubResource("Animation_r42v0")
}

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_apuh4")

[node name="Pause_menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6yqy5")

[node name="Panel" type="Panel" parent="Pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Pause_menu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause_menu/Panel/CenterContainer"]
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Pause_menu/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Pause_menu/Panel/CenterContainer/VBoxContainer"]
modulate = Color(0.878431, 0.360784, 0.647059, 0)
layout_mode = 2

[node name="Resume" type="Button" parent="Pause_menu/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Save" type="Button" parent="Pause_menu/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="Pause_menu/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Restart" type="Button" parent="Pause_menu/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="Pause_menu/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Save_menu" type="GridContainer" parent="Pause_menu/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2
script = ExtResource("3_v34e3")

[node name="Save_button_1" type="Button" parent="Pause_menu/Panel/CenterContainer/Save_menu"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "No save data"

[node name="Save_button_2" type="Button" parent="Pause_menu/Panel/CenterContainer/Save_menu"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "No save data"

[node name="Save_button_3" type="Button" parent="Pause_menu/Panel/CenterContainer/Save_menu"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "No save data"

[node name="Save_button_4" type="Button" parent="Pause_menu/Panel/CenterContainer/Save_menu"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "No save data"

[node name="Load_menu" type="GridContainer" parent="Pause_menu/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2
script = ExtResource("4_j6uxq")

[node name="Load_button_1" type="Button" parent="Pause_menu/Panel/CenterContainer/Load_menu"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "No save data"

[node name="Load_button_2" type="Button" parent="Pause_menu/Panel/CenterContainer/Load_menu"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "No save data"

[node name="Load_button_3" type="Button" parent="Pause_menu/Panel/CenterContainer/Load_menu"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "No save data"

[node name="Load_button_4" type="Button" parent="Pause_menu/Panel/CenterContainer/Load_menu"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "No save data"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Unpause"
libraries = {
"": SubResource("AnimationLibrary_o187k")
}
